--- a/html.html
+++ b/html.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>stopwatch js</title>
+    <title>stopwatch</title>
 </head>
 <body>
-
-
+    
     <h1><span id="time"></span></h1>
 
-
-    <h1 id="mahedi">mahedi</h1>
-
-    
-
-    <script src="dex.js"></script>
+    <script src="html.js"></script>
 </body>
 </html>
